# quran-llm

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_bpe.py
jupyter/: Bigram.ipynb  transformer.ipynb
loader/: __init__.py  localfile.py
model/: __init__.py  bigram.py  block.py  config.py  feed_forward.py  head.py  multi_head.py
tokenization/: __init__.py  byte_pair_encoding_tokenizer.py  one_letter_tokenizer.py  tokenizer.py
trainer/: data_splitter.py  trainer.py
